--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="first">
 
         <div class="image">
-             <img src="15.JPEG">
+             <img src="15.JPG">
             <p>00/00/0000</p>
         </div>
         <div class="image">
