--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
         <div class="image">
              <img src="15.JPG">
-            <p>00/00/0000</p>
+            <p>10/14/2023</p>
         </div>
         <div class="image">
-             <img src="process.JPEG">
-            <p>00/00/0000</p>
+             <img src="16.JPG">
+            <p>10/08/2023</p>
         </div>
 
     </div>
